--- a/templates/results.html
+++ b/templates/results.html
@@ -49,7 +49,7 @@
                 <span>Résultats Total</span>
             </div>
             <div class="stat-box">
-                <span class="stat-number">{{ results|selectattr("4")|list|length }}</span>
+                <span class="stat-number">{{ results|selectattr(4)|list|length }}</span>
                 <span>Avec Email</span>
             </div>
             <div class="stat-box">
